--- a/src/qt/forms/importwalletdialog.ui
+++ b/src/qt/forms/importwalletdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>339</width>
-    <height>262</height>
+    <width>344</width>
+    <height>310</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -17,6 +17,18 @@
    </sizepolicy>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <property name="leftMargin">
+    <number>20</number>
+   </property>
+   <property name="topMargin">
+    <number>20</number>
+   </property>
+   <property name="rightMargin">
+    <number>20</number>
+   </property>
+   <property name="bottomMargin">
+    <number>20</number>
+   </property>
    <item>
     <widget class="QLabel" name="lImportWallet">
      <property name="sizePolicy">
